--- a/index.html
+++ b/index.html
@@ -29,9 +29,65 @@
   
   <main class="content">
     <section>
-      <p class="text-center">Welcome to Penguado, where we take your browsing freedom and security seriously. In a world where online access is increasingly restricted, and personal privacy is at risk, our mission is to provide a seamless and safe online experience through our advanced web technologies. Whether you're seeking unrestricted access to websites, need a reliable way to access gaming platforms, or require a powerful video downloader and player for offline viewing, Penguado is your all-in-one solution. We prioritize privacy, ensuring that your data and activities remain secure, while also offering a simple, user-friendly interface that makes browsing easy and accessible for everyone. Our service is designed to work effortlessly across devices and platforms, so you can enjoy uninterrupted access to your favorite websites and services. Whether you're navigating educational resources, conducting professional research, or just enjoying some entertainment, Penguado enhances your productivity and leisure by ensuring a fast, reliable, and secure browsing experience. We understand that digital freedom is crucial in today’s connected world, and we're committed to giving you the tools you need to access the internet without restrictions. If you ever require assistance, our dedicated support team is always ready to help. You can always reach out to us at <a href="mailto:penguado@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">penguado.web@gmail.com</a> for any inquiries, technical support, or guidance.</p>
-      <p class="text-center">At Penguado, we take your privacy, safety, and security to the highest level. We understand the importance of protecting your personal data and online activities, and we are committed to ensuring that your digital experience is completely safe. Our services are designed to protect you from cyber attacks, unauthorized tracking, and data theft, providing you with peace of mind while navigating the web. We employ advanced security measures to keep your computer and sensitive information secure, ensuring that you can browse freely without worrying about potential threats. Your privacy is our priority, and we strive to maintain a safe and secure digital environment for every user, every time.</p>
-    </section>
+    	<div class="content">
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    At Penguado, we prioritize your productivity and online safety, offering a seamless, secure browsing experience through our advanced web tools. Our innovative service allows you to access the internet with greater freedom, reaching websites and content easily. Whether you're working remotely, researching, or enjoying entertainment, we ensure that you have uninterrupted access to the sites and services you need. Our sophisticated technology is designed to protect your privacy while giving you the flexibility to navigate the web safely and with privacy.
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+    Minimal-Tracking Service: Safe, Private, and Reliable
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    Your privacy is our top priority. Penguado’s service guarantees that none of your browsing data, activity logs, or personal information is stored or tracked. We believe in total transparency and strict privacy — what you do online is your business. Our secure infrastructure ensures that all traffic is encrypted and protected, giving you peace of mind while browsing. Whether you're accessing sensitive content or simply maintaining your personal access, our policy ensures that your identity and activity stay private at all times.
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+    Game Access Feature
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    With our advanced game access feature, you no longer need to worry about restrictions preventing you from playing your favorite games. Whether at school, work, or any location with internet limitations, our service allows you to reach gaming platforms that might otherwise be unavailable. Play all your top titles without interruptions, enjoy smooth gameplay, and dive into multiplayer experiences, all while ensuring your connection is secure and private.
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+    Video Downloader/Player
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    Our video downloader and player service offers a hassle-free way to save and enjoy videos from virtually any platform. From tutorials to entertainment, our service allows you to capture videos for offline viewing. Our player ensures high-quality playback with customizable settings to fit your preferences. Whether you’re looking to download videos for later or stream them directly through our player, you’ll experience flawless playback and convenience. The downloader supports a wide variety of formats, making it compatible with all your devices, whether you're at home, on the go, or at work.
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+    Free Access, Fast Performance
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    Penguado is provided completely free of charge to all users. We ask that you please use our service responsibly and avoid abusing its capabilities, so it remains fast and accessible for everyone. Thanks to our commitment to keeping Penguado free of advertisements, you can enjoy a smooth and speedy browsing experience without distractions or delays. We appreciate your understanding and cooperation in helping us maintain this high-quality, ad-free service for all users.
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+    Additional Features
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    <strong>Enhanced Privacy:</strong> Our technology masks your IP address, ensuring that all your online activities remain private and protected.<br /><br />
+    <strong>Easy-to-Use Interface:</strong> Designed with user experience in mind, Penguado’s interface is simple and intuitive, making it easy for you to access all of our services.<br /><br />
+    <strong>Customizable Settings:</strong> Tailor your experience to fit your needs. Adjust settings for browsing, video playback, and more, to ensure maximum convenience and performance.<br /><br />
+    <strong>Technical Support:</strong> Our team of experts is always available to assist you. Should you encounter any issues, we’re just a message away. Whether you require help troubleshooting, have questions about our services, or want advice on optimizing your experience, we’re ready to help.
+  </p>
+
+  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
+    If you have any further questions, require clarification on any aspect of our services, or require technical support, don't hesitate to reach out to us at 
+    <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">
+      penguado.web@gmail.com
+    </a>. We’re here to provide the support you need to fully enjoy the benefits of our advanced technology and make your internet experience both productive and enjoyable. We look forward to hearing from you and helping you make the most of Penguado’s offerings.
+  </p>
+
+</div>
+
+	</section>
     <!-- <section>
       <div class="btn-center">
         <button class="button">Center Button</button>
