--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 
 <div class="divider"></div>
 <div class="button-row">
-	<button class="button-outlined" onclick="window.location.href='../main-pages/login-signup/signup.html'">Signup</button>
-	<button class="button-outlined" onclick="window.location.href='../main-pages/about/index.html'">About</button>
-	<button class="button-outlined" onclick="window.location.href='../main-pages/games.html'">Games</button>
-	<button class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Apps</button>
-	<button class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Videos</button>
-	<button class="button-outlined" onclick="window.location.href='../main-pages/other/disable-blocksi.html'">Blocksi Hack</button>
+	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/login-signup/signup.html'">Signup</button>
+	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/about/index.html'">About</button>
+	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/games.html'">Games</button>
+	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Apps</button>
+	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Videos</button>
+	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/other/disable-blocksi.html'">Blocksi Hack</button>
 </div>
 
 
