--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Nav Bar -->
   <div id="nav-placeholder"></div>
   <!-- Banner -->
-  <header class="banner">
+  <header class="banner" style="height: 800px">
     <div class="banner-overlay">
       <h1 class="page-title">Penguado</h1>
       <div class="title-underline"></div>
