--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script src="assets/js/script.js" defer></script>
 </head>
 <body>
+<!-- Nav Bar -->
+  <div id="nav-placeholder" style="padding-top: 50px"></div>
 
   <!-- Banner -->
   <header class="banner" style="height: 800px">
@@ -21,9 +23,6 @@
 	  <div class="text-center" style="padding-top: 10px;">The Core of Connection...</div>
     </div>
   </header>
-
-	<!-- Nav Bar -->
-  <div id="nav-placeholder"></div>
 
   <!-- Content -->
 <div class="divider"></div>
