--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
 	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/other/disable-blocksi.html'">Blocksi Hack</button>
 </div>
 
+	<!-- Showcase Section -->
+<section class="content" style="max-width: 1100px; margin: 0 auto; padding-top: 60px;">
+  <div class="fade-in" style="display: flex; flex-wrap: wrap; justify-content: space-around; align-items: flex-start; gap: 40px; text-align: center;">
+    
+    <!-- Games -->
+    <div style="flex: 1 1 300px; min-width: 280px;">
+      <img src="../assets/images/games.jpg" alt="Penguado Games" style="width: 100%; max-width: 320px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+      <h2 style="color: #00897b; font-weight: 600;">Penguado Games</h2>
+      <p>This page has many intriguing games that are fun for all to play.</p>
+    </div>
+
+    <!-- Apps -->
+    <div style="flex: 1 1 300px; min-width: 280px;">
+      <img src="../assets/images/apps.jpg" alt="Penguado Apps" style="width: 100%; max-width: 320px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+      <h2 style="color: #00897b; font-weight: 600;">Penguado Apps</h2>
+      <p>Penguado Apps is a cutting-edge web tool that can take you anywhere on the internet without compromising your identity.</p>
+    </div>
+
+    <!-- Video Player -->
+    <div style="flex: 1 1 300px; min-width: 280px;">
+      <img src="../assets/images/video-player.jpg" alt="Penguado Video Player" style="width: 100%; max-width: 320px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+      <h2 style="color: #00897b; font-weight: 600;">Penguado Video Player</h2>
+      <p>This part of Penguado lets you download and watch videos from YouTube without visiting their site directly, allowing for private and anonymous video browsing.</p>
+    </div>
+
+  </div>
+
+  <div class="divider"></div>
+
+  <div class="out-btn-center fade-in" style="margin-top: 20px;">
+    <button class="button-outlined" onclick="window.location.href='https://penguado.top/support.html'">
+      Help Support Penguado — Minimal Ads, Maximum Speed
+    </button>
+  </div>
+</section>
+
 
   <!-- Footer DO NOT EDIT -->
   <footer class="footer">
