--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/other/disable-blocksi.html'">Blocksi Hack</button>
 </div>
 
+	<div class="divider"></div>
+
 	<!-- Showcase Section -->
 <section class="content" style="max-width: 1100px; margin: 0 auto; padding-top: 60px;">
   <div class="fade-in" style="display: flex; flex-wrap: wrap; justify-content: space-around; align-items: flex-start; gap: 40px; text-align: center;">
@@ -123,22 +125,22 @@
     </div>
 
   </div>
+</section>
 
-  <div class="divider"></div>
+	<div class="divider"></div>
 
   <div class="out-btn-center fade-in" style="margin-top: 20px;">
-    <button class="button-outlined" onclick="window.location.href='https://penguado.top/support.html'">
+    <button class="button-outlined" onclick="window.location.href='../main-pages/support-us/index.html'">
       Help Support Penguado — Minimal Ads, Maximum Speed
     </button>
   </div>
-</section>
 
 
   <!-- Footer DO NOT EDIT -->
   <footer class="footer">
 	
 	  <div class="footer-embed">
-		<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none;"></iframe>
+		<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 0px;"></iframe>
 	</div>
     
 	  <div class="footer-content">
