--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 
 
   <!-- Footer DO NOT EDIT -->
-  <footer class="footer">
+  <footer class="footer" style="padding-bottom: 50px;">
 	
 	  <div class="footer-embed">
-		<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 0px; padding-top: 0px;"></iframe>
+		<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 0px; padding-top: 20px;"></iframe>
 	</div>
     
 	  <div class="footer-content">
@@ -158,7 +158,7 @@
      
       </div>
 
-      <div class="text-right" style="padding-bottom: 50px;">
+      <div class="text-right">
 
         <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
         <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
