--- a/index.html
+++ b/index.html
@@ -135,14 +135,12 @@
     </button>
   </div>
 
+<div class="divider"></div>
+
+<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
 
   <!-- Footer DO NOT EDIT -->
-  <footer class="footer" style="padding-bottom: 50px;">
-	
-	  <div class="footer-embed">
-		<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 0px; padding-top: 20px;"></iframe>
-	</div>
-    
+  <footer class="footer" style="padding-bottom: 100px;">
 	  <div class="footer-content">
       <div class="text-left">
       
