--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	<div class="divider"></div>
 
   <div class="out-btn-center fade-in" style="margin-top: 20px;">
-    <button class="button-outlined" onclick="window.location.href='../main-pages/support-us/index.html'">
+    <button class="button-outlined" onclick="window.location.href='../main-pages/support-us/index.html'" style="width: 1020px;">
       Help Support Penguado — Minimal Ads, Maximum Speed
     </button>
   </div>
