--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
         
       </div>
     </div>
+
+	<iframe src="../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
   </footer>
 
 </body>
