--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- Nav Bar -->
-  <div id="nav-placeholder" style="padding-top: 50px; padding-bottom:50px;"></div>
+  <div id="nav-placeholder" style="padding-top: 50px;"></div>
 
   <!-- Banner -->
   <header class="banner" style="height: 800px">
