--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- Nav Bar -->
-  <div id="nav-placeholder" style="padding-top: 50px; padding-bottom:50px;"></div>
+  <div id="nav-placeholder" style="padding-top: 50px;"></div>
 
   <!-- Banner -->
   <header class="banner" style="height: 800px">
@@ -45,7 +45,9 @@
 
     <p style="margin-top: 20px;">
       If you need help, or have questions about any of our services please feel free to contact us at 
-      <a href="mailto:penguado.web@gmail.com" style="color: #00897b; font-weight: 500;">penguado.web@gmail.com</a>.
+      <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;" class="fade-in">
+         penguado.web@gmail.com
+       </a>
     </p>
   </section>
 
