--- a/template.html
+++ b/template.html
@@ -98,7 +98,7 @@
 	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../index.html'">Go Home</button>
 	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/games.html'">Go to Games</button>
 	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
-	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Video Player</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
 </div>
 
 	<div class="divider"></div>
