--- a/template.html
+++ b/template.html
@@ -51,7 +51,9 @@
     </p>
   </section>
 
-  <div class="divider"></div>
+</main>
+	<div class="divider"></div>
+<main class="content">
 
   <section class="fade-in">
     <h3 style="font-weight: 600;">Why You Need to Sign Up on Penguado</h3>
