--- a/main-pages/login-signup/index.html
+++ b/main-pages/login-signup/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- Nav Bar -->
-  <div id="nav-placeholder" style="padding-top: 50px; padding-bottom:50px;"></div>
+  <div id="nav-placeholder" style="padding-top: 50px;"></div>
 
   <!-- Banner -->
   <header class="banner" style="height: 800px">
@@ -45,11 +45,15 @@
 
     <p style="margin-top: 20px;">
       If you need help, or have questions about any of our services please feel free to contact us at 
-      <a href="mailto:penguado.web@gmail.com" style="color: #00897b; font-weight: 500;">penguado.web@gmail.com</a>.
+      <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;" class="fade-in">
+         penguado.web@gmail.com
+       </a>
     </p>
   </section>
 
-  <section class="divider"></section>
+</main>
+	<div class="divider"></div>
+<main class="content">
 
   <section class="fade-in">
     <h3 style="font-weight: 600;">Why You Need to Sign Up on Penguado</h3>
@@ -93,43 +97,11 @@
 
 <div class="divider"></div>
 <div class="button-row">
-	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/login-signup/signup.html'">Signup</button>
-	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/about/index.html'">About</button>
-	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/games.html'">Games</button>
-	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Apps</button>
-	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Videos</button>
-	<button style="width: 170px" class="button-outlined" onclick="window.location.href='../main-pages/other/disable-blocksi.html'">Blocksi Hack</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../index.html'">Go Home</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/games.html'">Go to Games</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
+	<button style="width: 195px" class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
 </div>
-
-	<div class="divider"></div>
-
-	<!-- Showcase Section -->
-<section class="content" style="max-width: 1100px; margin: 0 auto; padding-top: 60px;">
-  <div class="fade-in" style="display: flex; flex-wrap: wrap; justify-content: space-around; align-items: flex-start; gap: 40px; text-align: center;">
-    
-    <!-- Games -->
-    <div style="flex: 1 1 300px; min-width: 280px;">
-      <img src="../assets/images/games.jpg" alt="Penguado Games" style="width: 100%; max-width: 320px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-      <h2 style="color: #00897b; font-weight: 600;">Penguado Games</h2>
-      <p>This page has many intriguing games that are fun for all to play.</p>
-    </div>
-
-    <!-- Apps -->
-    <div style="flex: 1 1 300px; min-width: 280px;">
-      <img src="../assets/images/apps.jpg" alt="Penguado Apps" style="width: 100%; max-width: 320px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-      <h2 style="color: #00897b; font-weight: 600;">Penguado Apps</h2>
-      <p>Penguado Apps is a cutting-edge web tool that can take you anywhere on the internet without compromising your identity.</p>
-    </div>
-
-    <!-- Video Player -->
-    <div style="flex: 1 1 300px; min-width: 280px;">
-      <img src="../assets/images/video-player.jpg" alt="Penguado Video Player" style="width: 100%; max-width: 320px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-      <h2 style="color: #00897b; font-weight: 600;">Penguado Video Player</h2>
-      <p>This part of Penguado lets you download and watch videos from YouTube without visiting their site directly, allowing for private and anonymous video browsing.</p>
-    </div>
-
-  </div>
-</section>
 
 	<div class="divider"></div>
 
