--- a/embeds/games/index.html
+++ b/embeds/games/index.html
@@ -503,6 +503,7 @@
         <button class="game-button" data-category="sports" onclick="embedWebsite('https://smash-kartsonline.github.io/g/class-811')">Play Volley Random Official</button>
         <button class="game-button" data-category="platformer" onclick="embedWebsite('https://smash-kartsonline.github.io/g26/class-537')">Play Snow Rider 3D Official</button>
         <button class="game-button" data-category="arcade" onclick="embedWebsite('https://onlinescientificresearch.com/games/coreball/')">Play Coreball Official</button>
+        <button class="game-button" data-category="arcade" onclick="embedWebsite('https://polytrack-online.github.io/file/')">Play PolyTrack Official</button>
 
             </div>
         </div>
