--- a/embeds/login-redirect.html
+++ b/embeds/login-redirect.html
@@ -128,9 +128,9 @@
 
     <!-- Button Row -->
     <div class="button-row hidden" id="buttonRow">
-      <a href="https://sites.google.com/westfordk12.us/a-penguado-lll-bms/d-mes-path-g" target="_blank">Games</a>
-      <a href="https://sites.google.com/westfordk12.us/a-penguado-lll-bms/d-mes-path-a" target="_blank">Apps</a>
-      <a href="https://sites.google.com/westfordk12.us/a-penguado-lll-bms/d-mes-path-v" target="_blank">Video Player</a>
+      <a href="./games/index.html" target="_blank">Games</a>
+      <a href="./apps.html" target="_blank">Apps</a>
+      <a href="./video-player.html" target="_blank">Video Player</a>
     </div>
   </div>
 
