--- a/navigation.html
+++ b/navigation.html
@@ -11,7 +11,7 @@
 
     <!-- Right side: navigation links -->
     <div class="nav-right">
-      <a href="../index.html">Home</a>
+      <a href="../../../index.html">Home</a>
       <a href="main-pages/login-signup/index.html">Login &amp; Signup</a>
       <a href="main-pages/profile.html">Profile</a>
       <a href="main-pages/about/index.html">About</a>
