--- a/main-pages/login-signup/index.html
+++ b/main-pages/login-signup/index.html
@@ -153,7 +153,7 @@
 </body>
 
   <script>
-  fetch("../../navigation.html")
+  fetch("navigation.html")
     .then(response => response.text())
     .then(data => {
       document.getElementById("nav-placeholder").innerHTML = data;
