--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
     <!-- Left side: logo + brand -->
     <div class="nav-left">
       <a href="index.html" style="display: flex; align-items: center; gap: 0.5em;">
-        <img src="assets/images/logo.jpg" alt="Penguado Logo" style="height: 30px; width: auto;">
+        <img src="../../../assets/images/logo.jpg" alt="Penguado Logo" style="height: 30px; width: auto;">
         <span style="font-weight: bold;">Penguado</span>
       </a>
     </div>
