--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -35,7 +35,6 @@
   <div class="divider"></div>
 
   <main class="content">
-    <section class="fade-in">
       <p>
         This feature is still developing! We are working towards a better solution to unreliable links. If you have any game suggestions, feel free to contact us at
         <a href="mailto:penguado.web@gmail.com" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
@@ -66,20 +65,18 @@
           Learn How to Make a Game on Penguado
         </button>
       </div>
-    </section>
+    
+    <div class="divider"></div>
+
+    <embed src="../embeds/games/fullscreen.html" style="width: 100%; height: 100%;" />
 
     <div class="divider"></div>
 
-    <embed src="../embeds/games/fullscreen.html" style="width: 100%; height: 600px;" />
-
-    <div class="divider"></div>
-
-    <embed src="../embeds/games/index.html" style="width: 100%; height: 600px;" />
+    <embed src="../embeds/games/index.html" style="width: 100%; height: 100%;" />
 
     <div class="divider"></div>
 
     <p class="text-center">This bar indicates which Penguado users are online.</p>
-    <br />
 
     <!-- Removed duplicate embed for index.html -->
 
