--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!-- Nav Bar -->
-  <div id="nav-placeholder" style="padding-top: 15px;"></div>
+  <div id="nav-placeholder" style="padding-top: 5px;"></div>
 
   <!-- Banner -->
   <header class="banner">
@@ -27,7 +27,7 @@
 
   <!-- Buttons -->
   <div class="divider"></div>
-  <div class="out-btn-center fade-in" style="margin-top: 20px;">
+  <div class="out-btn-center">
     <button class="button-outlined" style="width: 1020px;" onclick="window.location.href='../main-pages/support-us/index.html'">
       Help Support Penguado — Minimal Ads, Maximum Speed
     </button>
@@ -68,11 +68,11 @@
     
     <div class="divider"></div>
 
-    <embed src="../embeds/games/fullscreen.html" style="width: 100%; height: 100%;" />
+    <embed src="../embeds/games/fullscreen.html" style="width: 100%; height: 52px;" />
 
     <div class="divider"></div>
 
-    <embed src="../embeds/games/index.html" style="width: 100%; height: 100%;" />
+    <embed src="../embeds/games/index.html" style="width: 100%; height: 600px; padding: 0px !important;" />
 
     <div class="divider"></div>
 
@@ -81,9 +81,9 @@
     <!-- Removed duplicate embed for index.html -->
 
     <div class="button-row">
-      <button class="button-outlined" style="width: 350px;" onclick="window.location.href='../index.html'">Go Home</button>
-      <button class="button-outlined" style="width: 359px;" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
-      <button class="button-outlined" style="width: 350px;" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
+      <button class="button-outlined" style="width: 320px;" onclick="window.location.href='../index.html'">Go Home</button>
+      <button class="button-outlined" style="width: 320px;" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
+      <button class="button-outlined" style="width: 320px;" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
     </div>
 
     <div class="divider"></div>
