--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -28,7 +28,7 @@
   <!-- Buttons -->
   <div class="divider"></div>
   <div class="out-btn-center">
-    <button class="button-outlined" style="width: 1020px;" onclick="window.location.href='../main-pages/support-us/index.html'">
+    <button class="button-outlined" style="width: 1000px; padding: 0px;" onclick="window.location.href='../main-pages/support-us/index.html'">
       Help Support Penguado — Minimal Ads, Maximum Speed
     </button>
   </div>
@@ -44,20 +44,13 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
           here
         </a>
-        to submit a feedback form.<br />
+        to submit a feedback form. <br>
         If you would like to code your own game to submit to us, please submit your project URLs at the
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
           feedback
         </a>
         form (HTML games are only accepted & GitHub/other similar websites are not allowed to be used)! Penguado provides an online HTML editor for free which you can use as an alternative. As an alternative, Penguado provides a free online HTML editor, with live hosting for URLs. For more information please check out our webpage about how to submit an HTML game for free!
         <strong>As of now Penguado has reached over 1000 games, and will continue to grow rapidly!</strong>
-      </p>
-
-      <p style="margin-top: 20px;">
-        If you need help, or have questions about any of our services please feel free to contact us at
-        <a href="mailto:penguado.web@gmail.com" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
-          penguado.web@gmail.com
-        </a>
       </p>
 
       <div class="out-btn-center">
