--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
-     crossorigin="anonymous"></script>	
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943" crossorigin="anonymous"></script>	
   <link rel="icon" type="image/jpg" href="../../assets/images/favicon.jpg">
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Penguado - Games</title>
-  
-  <!-- These will crash if not properly put in file structure -->
+
   <link rel="stylesheet" href="../../assets/css/style.css" />
   <script src="../../assets/js/script.js" defer></script>
 </head>
 <body>
+
   <!-- Nav Bar -->
-  <div id="nav-placeholder" style="padding-top: 5px;"></div>
+  <div id="nav-placeholder"></div>
 
   <!-- Banner -->
   <header class="banner">
@@ -25,73 +24,82 @@
     </div>
   </header>
 
-  <!-- Buttons -->
+  <!-- Support Button -->
   <div class="divider"></div>
   <div class="out-btn-center">
-    <button class="button-outlined" style="width: 1000px; padding: 0px;" onclick="window.location.href='../main-pages/support-us/index.html'">
+    <button class="button-outlined" onclick="window.location.href='../main-pages/support-us/index.html'">
       Help Support Penguado — Minimal Ads, Maximum Speed
     </button>
   </div>
   <div class="divider"></div>
 
   <main class="content">
-      <p>
-        This feature is still developing! We are working towards a better solution to unreliable links. If you have any game suggestions, feel free to contact us at
-        <a href="mailto:penguado.web@gmail.com" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
-          penguado.web@gmail.com
-        </a>,
-        or click
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
-          here
-        </a>
-        to submit a feedback form. <br>
-        If you would like to code your own game to submit to us, please submit your project URLs at the
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
-          feedback
-        </a>
-        form (HTML games are only accepted & GitHub/other similar websites are not allowed to be used)! Penguado provides an online HTML editor for free which you can use as an alternative. As an alternative, Penguado provides a free online HTML editor, with live hosting for URLs. For more information please check out our webpage about how to submit an HTML game for free!
-        <strong>As of now Penguado has reached over 1000 games, and will continue to grow rapidly!</strong>
-      </p>
 
-      <div class="out-btn-center">
-        <button class="button-outlined" style="width: 1100px;" onclick="window.location.href='../main-pages/online-html-editor/add-penguado-game.html'">
-          Learn How to Make a Game on Penguado
-        </button>
-      </div>
-    
+    <!-- Description -->
+    <p>
+      This feature is still developing! We are working towards a better solution to unreliable links. If you have any game suggestions, feel free to contact us at
+      <a href="mailto:penguado.web@gmail.com" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
+        penguado.web@gmail.com
+      </a>,
+      or click
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
+        here
+      </a>
+      to submit a feedback form. <br />
+      If you would like to code your own game to submit to us, please submit your project URLs at the
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform" class="fade-in" style="font-weight: bold; color: #00897b; text-decoration: none;">
+        feedback
+      </a>
+      form (HTML games only accepted; GitHub/other similar platforms are not supported). Penguado offers a free online HTML editor with live hosting. 
+      <strong>As of now Penguado has reached over 1000 games, and will continue to grow rapidly!</strong>
+    </p>
+
+    <!-- Learn More Button -->
+    <div class="out-btn-center">
+      <button class="button-outlined" onclick="window.location.href='../main-pages/online-html-editor/add-penguado-game.html'">
+        Learn How to Make a Game on Penguado
+      </button>
+    </div>
+
     <div class="divider"></div>
 
-    <embed src="../embeds/games/fullscreen.html" style="width: 100%; height: 52px;" />
+    <!-- Fullscreen Embed Bar -->
+    <div class="embed-container">
+      <embed src="../embeds/games/fullscreen.html" class="embed-bar" />
+    </div>
 
     <div class="divider"></div>
 
-    <embed src="../embeds/games/index.html" style="width: 100%; height: 600px; padding: 0px !important;" />
+    <!-- Games Embed -->
+    <div class="embed-container">
+      <embed src="../embeds/games/index.html" class="embed-main" />
+    </div>
 
     <div class="divider"></div>
 
     <p class="text-center">This bar indicates which Penguado users are online.</p>
 
-    <!-- Removed duplicate embed for index.html -->
-
+    <!-- Navigation Buttons -->
     <div class="button-row">
-      <button class="button-outlined" style="width: 320px;" onclick="window.location.href='../index.html'">Go Home</button>
-      <button class="button-outlined" style="width: 320px;" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
-      <button class="button-outlined" style="width: 320px;" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
+      <button class="button-outlined" onclick="window.location.href='../index.html'">Go Home</button>
+      <button class="button-outlined" onclick="window.location.href='../main-pages/apps.html'">Go to Apps</button>
+      <button class="button-outlined" onclick="window.location.href='../main-pages/video-player/index.html'">Go to Videos</button>
     </div>
 
     <div class="divider"></div>
 
-    <iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding: 20px 0;"></iframe>
+    <!-- Cookie Policy -->
+    <iframe src="../../embeds/cookie-policy.html" class="iframe-default"></iframe>
   </main>
 
-  <!-- Footer DO NOT EDIT -->
-  <footer class="footer" style="padding-bottom: 100px;">
+  <!-- Footer -->
+  <footer class="footer">
     <div class="footer-content">
       <div class="text-left">
         <p style="font-size: 12px;">
           © 2025 Penguado (https://penguado.top).<br />
           All rights reserved. Unauthorized use of this code is prohibited.
-          <a href="https://penguado.top/main-pages/about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">
+          <a href="https://penguado.top/main-pages/about/license.html" class="link-bold">
             View License
           </a><br /><br />
           We are working hard to improve your user experience.
@@ -99,37 +107,18 @@
       </div>
 
       <div class="text-right">
-        <p style="font-size: 12px;">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">
-            Feedback
-          </a>
-        </p>
-        <p style="font-size: 12px;">
-          <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">
-            Contact us
-          </a>
-        </p>
-        <p style="font-size: 12px;">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjMeVUaN9aUJFXR7wxBV1QmOhLHVsLB8gGAzo_gd9yxWBz6Q/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">
-            Report a bug
-          </a>
-        </p>
-        <p style="font-size: 12px;">
-          <a href="../main-pages/about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">
-            Privacy Policy
-          </a>
-        </p>
-        <p style="font-size: 12px;">
-          <a href="../main-pages/about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">
-            Terms of Service
-          </a>
-        </p>
+        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" class="link-bold">Feedback</a></p>
+        <p><a href="mailto:penguado.web@gmail.com" class="link-bold">Contact us</a></p>
+        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfjMeVUaN9aUJFXR7wxBV1QmOhLHVsLB8gGAzo_gd9yxWBz6Q/viewform?usp=header" class="link-bold">Report a bug</a></p>
+        <p><a href="../main-pages/about/privacy-policy/index.html" class="link-bold">Privacy Policy</a></p>
+        <p><a href="../main-pages/about/terms-of-service/index.html" class="link-bold">Terms of Service</a></p>
       </div>
     </div>
 
     <iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
   </footer>
 
+  <!-- Navigation loader -->
   <script>
     fetch("../../navigation.html")
       .then(response => response.text())
