--- a/embeds/games/index.html
+++ b/embeds/games/index.html
@@ -511,6 +511,7 @@
 
     <div id="gameFrameContainer" class="game-container"></div>
     <button id="back-button" class="back-button" onclick="goBack()">Back</button>
+    <iframe src="../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
 
     <script>
         // Check login status on page load
