--- a/embeds/games/fullscreen.html
+++ b/embeds/games/fullscreen.html
@@ -20,6 +20,7 @@
 }
 </style>
 <button class="openFullscreen" onclick="openFullscreen('https://penguado.top/embeds/games/index.html')">Open Fullscreen</button>
+<iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
 
 <script>
 function openFullscreen(url) {
