--- a/embeds/login.html
+++ b/embeds/login.html
@@ -172,6 +172,7 @@ button:hover {
   </style>
 </head>
 <body>
+  <iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
   <div id="login-section">
     <h2>Login</h2>
     <input id="email" placeholder="Email" type="email" autocomplete="email"><br>
