--- a/main-pages/login-signup/index.html
+++ b/main-pages/login-signup/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <!-- Nav Bar -->
-  <div id="nav-placeholder" style="padding-top: 15px;"></div>
+  <div id="nav-placeholder"></div>
 
   <!-- Banner -->
   <header class="banner" style="height: 400px">
