--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -8,8 +8,8 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Penguado - Games</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/js/script.js" defer></script>
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <script src="../assets/js/script.js" defer></script>
 </head>
 <body><!-- Nav Bar -->
 <div id="nav-placeholder"></div>
@@ -63,6 +63,8 @@
   <iframe src="../../embeds/games/fullscreen.html" style="width: 100%; height: 450px; border: none;"></iframe>
 </section>
 
+<div class="divider"></div>
+	<iframe src="../../embeds/games/index.html" style="width: 100%; height: 450px; border: none;"></iframe>
 <div class="divider"></div>
 
 <!-- Indicator Bar -->
