--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -60,17 +60,17 @@
 
 <!-- Fullscreen Button Embed -->
 <section class="content fade-in">
-  <iframe src="../../embeds/games/fullscreen.html" style="width: 100%; height: 450px; border: none;"></iframe>
+  <iframe src="../../embeds/games/fullscreen.html" style="width: 100%; height: 100%; border: none;"></iframe>
 </section>
 
 <div class="divider"></div>
-	<iframe src="../../embeds/games/index.html" style="width: 100%; height: 450px; border: none;"></iframe>
+	<iframe src="../../embeds/games/index.html" style="width: 100%; height: 600px; border: none;"></iframe>
 <div class="divider"></div>
 
 <!-- Indicator Bar -->
 <main class="content fade-in">
-  <p style="font-weight: bold; margin-bottom: 10px;">This bar indicates which Penguado users are online.</p>
-  <iframe src="../../embeds/indicator-bar.html" style="width: 100%; height: 50px; border: none;"></iframe>
+  <p style="margin-bottom: 10px;">This bar indicates which Penguado users are online.</p>
+  <iframe src="../../embeds/indicator-bar.html" style="width: 100%; height: 100px; border: none;"></iframe>
 </main>
 
 <div class="divider"></div>
