--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -60,7 +60,7 @@
 
 <!-- Fullscreen Button Embed -->
 <section class="content fade-in">
-  <iframe src="../../embeds/games/fullscreen.html" style="width: 100%; height: 100%; border: none;"></iframe>
+  <iframe src="../../embeds/games/fullscreen.html" style="width: 100%; height: 100px; border: none;"></iframe>
 </section>
 
 <div class="divider"></div>
