--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -58,24 +58,25 @@
 
 <div class="divider"></div>
 
-<section class="content fade-in">
-
-  <!-- Fullscreen Button Embed -->
-  <iframe src="/embeds/games/fullscreen.html" style="width: 100%; height: 100px; border: none; margin-bottom: 20px;"></iframe>
-
-  <div class="divider"></div>
-
-  <!-- Main Games Embed -->
-  <iframe src="/embeds/games/index.html" style="width: 100%; height: 600px; border: none; margin-bottom: 20px;"></iframe>
-
-  <div class="divider"></div>
-
-  <!-- Indicator Bar -->
-  <p style="font-weight: bold; margin-bottom: 10px;">This bar indicates which Penguado users are online.</p>
-  <iframe src="/embeds/indicator-bar.html" style="width: 100%; height: 100px; border: none;"></iframe>
-
+<!-- Fullscreen Button Embed -->
+<section class="content">
+  <iframe src="../../embeds/games/fullscreen.html" style="width: 100%; height: 80px; border: none;"></iframe>
 </section>
 
+<div class="divider"></div>
+
+<!-- Games Embed -->
+<section class="content">
+  <iframe src="../../embeds/games/index.html" style="width: 100%; height: 600px; border: none;"></iframe>
+</section>
+
+<div class="divider"></div>
+
+<!-- Indicator Bar -->
+<section class="content text-center">
+  <p style="margin-bottom: 10px;">This bar indicates which Penguado users are online.</p>
+  <iframe src="../../embeds/indicator-bar.html" style="width: 100%; height: 100px; border: none;"></iframe>
+</section>
 
 <div class="divider"></div>
 
