--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -88,6 +88,8 @@
 </div>
 
 <div class="divider"></div>
+	<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+<div class="divider"></div>
 
 <!-- Footer DO NOT EDIT -->
 <footer class="footer" style="padding-bottom: 100px;">
