--- a/main-pages/video-player/index.html
+++ b/main-pages/video-player/index.html
@@ -34,7 +34,7 @@
 
 <!-- Video Player Embed -->
 <section class="content">
-  <iframe src="../../../embeds/video-player/index.html" style="width: 100%; height: 600px; border: none;"></iframe>
+  <iframe src="../../../embeds/video-player.html" style="width: 100%; height: 600px; border: none;"></iframe>
   <p style="margin-top: 10px; font-weight: bold;">This is the official version of the video player!</p>
 </section>
 
@@ -42,7 +42,7 @@
 
 <!-- Button Row #1: Video Downloader -->
 <div class="button-row">
-  <button style="width: 340px" class="button-outlined" onclick="window.location.href='../../main-pages/video-downloader/index.html'">Video Downloader</button>
+  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='../../main-pages/video-downloader/index.html'">Go to Video Downloader</button>
 </div>
 
 <div class="divider"></div>
@@ -58,7 +58,7 @@
 
 <!-- Button Row #3: Help Support Penguado -->
 <div class="button-row">
-  <button style="width: 510px" class="button-outlined" onclick="window.location.href='../../main-pages/support-us/index.html'">Help Support Penguado</button>
+  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='../../main-pages/support-us/index.html'">Help Support Penguado — Minimal Ads, Maximum Speed</button>
 </div>
 
 <div class="divider"></div>
