--- a/main-pages/video-player/index.html
+++ b/main-pages/video-player/index.html
@@ -35,7 +35,7 @@
 <!-- Video Player Embed -->
 <section class="content">
   <iframe src="../../../embeds/video-player.html" style="width: 100%; height: 600px; border: none;"></iframe>
-  <p style="margin-top: 10px; font-weight: bold;">This is the official version of the video player!</p>
+  <p style="margin-top: 10px;">This is the official version of the video player!</p>
 </section>
 
 <div class="divider"></div>
