--- a/main-pages/apps.html
+++ b/main-pages/apps.html
@@ -44,7 +44,7 @@
 
 <!-- Apps Embed -->
 <section class="content">
-  <iframe src="../../../embeds/apps/index.html" style="width: 100%; height: 600px; border: none;"></iframe>
+  <iframe src="../../../embeds/apps.html" style="width: 100%; height: 600px; border: none;"></iframe>
   <p style="margin-top: 10px;">
     This is the new and official version! Version 4 introduces improved protection and access capabilities, letting you visit the websites you need with ease.
   </p>
