--- a/embeds/login-redirect.html
+++ b/embeds/login-redirect.html
@@ -128,7 +128,7 @@
 
     <!-- Button Row -->
     <div class="button-row hidden" id="buttonRow">
-      <a href="../../main-pages/games/index.html" target="_blank">Games</a>
+      <a href="../../main-pages/games.html" target="_blank">Games</a>
       <a href="../../main-pages/apps.html" target="_blank">Apps</a>
       <a href="../../main-pages/video-player/index.html" target="_blank">Video Player</a>
     </div>
